rendering projects from template, fixing arrow image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,64 +123,7 @@
           </p>
         </div>
         <!-- Projects Box -->
-        <div id="projects-box" style="display: none">
-          <div
-            class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black p-2 mb-6"
-          >
-            <img src="images/projects/whisperblog.png" class="max-h-70 p-2" />
-            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">
-              WhisperBlog
-            </div>
-            <a
-              class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic"
-              href="https://whisperblog.xyz/"
-              >www.whisperblog.xyz</a
-            >
-            <p class="font-mono text-white text-sm py-2">
-              My take on what social media should be like
-            </p>
-          </div>
-          <div
-            class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black p-2 mb-6"
-          >
-            <img src="images/projects/wcne.png" class="max-h-70 p-2" />
-            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">
-              WindowCleanNE
-            </div>
-            <a
-              class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic"
-              href="https://whisperblog.xyz/"
-              >windowcleannortheast.co.uk</a
-            >
-            <p class="font-mono text-white text-sm py-2">
-              Client website made during lockdown
-            </p>
-          </div>
-          <div
-            class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black p-2 mb-6"
-          >
-            <img src="images/projects/flowpass.png" class="max-h-70 p-2" />
-            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">
-              FlowPass
-            </div>
-            <a
-              class="font-mono text-cyan-200 hover:text-cyan-300 mb-2"
-              href="https://github.com/georgejmx/FlowPass"
-              >fork me</a
-            >
-            <p class="font-mono text-white text-sm py-2">
-              Custom android password manager for personal use
-            </p>
-          </div>
-          <p class="text-white font-mono">
-            Many more projects can be found on my
-            <a
-              href="https://github.com/georgejmx/"
-              class="font-mono text-yellow-200 hover:text-yellow-500"
-              >GitHub</a
-            >
-          </p>
-        </div>
+        <div id="projects-box" style="display: none"></div>
         <!-- Blog Box -->
         <div id="story-box" style="display: none"></div>
       </div>
@@ -200,5 +143,9 @@
 <h1>Story</h1>
 <div
   class="mb-6 text-2xl w-3/4 bg-black text-xs font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202] font-light italic text-xs mr-2"
+></div>
+<h1>Projects</h1>
+<div
+  class="overflow-hidden border-yellow-500 bg-black p-2 mb-6 max-h-70 p-2 font-bold text-xl mb-2 font-mono text-yellow-500 text-cyan-200 hover:text-cyan-300 mb-2 italic text-white text-sm py-2"
 ></div>
 -->
