--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="fractal.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/background.js" defer></script>
-    <script type="module" src="/main.js" defer></script>
+    <script type="module" src="/src/background.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
     <title>George | Home</title>
   </head>
   <body>
