fixing story redirect using url param, adding to homepage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/src/main.ts"></script>
     <title>George | Home</title>
   </head>
-  <body>
+  <body style="background-color: black">
     <canvas id="bg" style="position: fixed; top: 0; left: 0"></canvas>
     <main class="relative w-2/3">
       <div class="absolute left-0 top-20 p-6">
@@ -50,6 +50,15 @@
             <p
               id="artists-text"
               class="inline text-orange-400 text-sm font-mono font-bold"
+            ></p>
+          </div>
+          <div
+            class="py-2 max-w-sm w-full border-yellow-500 text-yellow-500 text-sm bg-black font-mono font-bold mt-4"
+          >
+            <img class="inline" src="images/logos/book-stack-16.png" />
+            <p
+              id="top-stories-text"
+              class="inline text-yellow-500 text-sm font-mono font-bold"
             ></p>
           </div>
           <div>
@@ -120,6 +129,12 @@
           <p class="mt-8 text-slate-400 font-mono italic bg-black">
             “If you do not tell the truth about yourself you cannot tell it
             about other people.”
+          </p>
+          <p class="mt-4 text-slate-400 font-mono bg-black md:text-sm">
+            Finding my true self by not turning down any opportunities to learn
+            from the places and people I have encountered whilist maintaining a
+            focus on my personal growth. Living a life of changing perspectives
+            and continual emotional discovery.
           </p>
         </div>
         <!-- Projects Box -->
