story modal working in ui

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,6 +159,10 @@
 <div
   class="mb-6 text-2xl w-3/4 bg-black text-xs font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202] font-light italic text-xs mr-2"
 ></div>
+<h2>Story Modal</h2>
+<div
+  class="z-50 fixed inset-2 top-12 overflow-y-auto flex items-end justify-center text-center md:items-center sm:block inline-block max-w-prose overflow-hidden text-left transition-all transform bg-black font-mono 2xl:max-w-2xl xl:w-3/5 relative py-3 md:px-10 border border-b-4 border-yellow-500 px-2 text-yellow-500 font-xl font-bold mb-1 underline-offset-1 text-white text-xs mb-2 leading-tight pt-3 tracking-normal underline font-bold pb-5 text-xs bg-black hover:bg-[#360202] p-1 mr-2 mb-2 text-yellow-500 focus:outline focus:bg-[#360202] border rounded border-yellow-500 text-slate-900 text-sm leading-tight pt-3 tracking-normal font-bold items-center justify-evenly w-full p-2 text-green-500 bg-black text-sm font-bold py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
+></div>
 <h1>Projects</h1>
 <div
   class="overflow-hidden border-yellow-500 bg-black p-2 mb-6 max-h-70 p-2 font-bold text-xl mb-2 font-mono text-yellow-500 text-cyan-200 hover:text-cyan-300 mb-2 italic text-white text-sm py-2"
