error message fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
           </div>
           <div>
             <h2 class="text-lg text-white font-mono py-2 mt-4 font-bold">
-              Current Fascinations
+              Hit Me Up about..
             </h2>
             <div id="fascination-box"></div>
           </div>
