--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,6 +165,9 @@
 ></div>
 <h1>Projects</h1>
 <div
-  class="overflow-hidden border-yellow-500 bg-black p-2 mb-6 max-h-70 p-2 font-bold text-xl mb-2 font-mono text-yellow-500 text-cyan-200 hover:text-cyan-300 mb-2 italic text-white text-sm py-2"
+  class="overflow-hidden border-yellow-500 bg-black p-2 mb-6 max-h-70 p-2 font-bold text-xl mb-2 font-mono text-yellow-500 text-cyan-200 hover:text-cyan-300 mb-2 italic text-white text-sm py-2 px-10"
+></div>
+<div
+  class="py-20 text-2xl border-purple-500 py-10"
 ></div>
 -->
