--- a/frontend/index.html
+++ b/frontend/index.html
@@ -167,7 +167,8 @@
 <div
   class="overflow-hidden border-yellow-500 bg-black p-2 mb-6 max-h-70 p-2 font-bold text-xl mb-2 font-mono text-yellow-500 text-cyan-200 hover:text-cyan-300 mb-2 italic text-white text-sm py-2 px-10"
 ></div>
+<h1>Admin</h1>
 <div
-  class="py-20 text-2xl border-purple-500 py-10"
+  class="py-20 text-2xl py-8 rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500 py-4 leading-tight rounded border border-white bg-black my-2 align-top py-1 text-orange-400 border-2 border-purple-500 bg-black px-2"
 ></div>
 -->
