--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -10,36 +10,36 @@
   <body class="bg-black font-mono text-white">
     <div class="flex flex-col flex-wrap items-center justify-center py-20">
       <h1 class="text-2xl underline">Admin</h1>
-      <div class="py-8">
+      <div class="py-8 px-2">
         <button
-          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500"
+          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500 mb-1"
           id="artist-btn"
         >
           New Artist
         </button>
         <button
-          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500"
+          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500 mb-1"
           id="hmu-btn"
         >
           New HMU
         </button>
         <button
-          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500"
+          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500 mb-1"
           id="project-btn"
         >
           New Project
         </button>
         <button
-          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500"
+          class="rounded border border-white px-2 focus:border-purple-500 focus:text-purple-500 mb-1"
           id="story-btn"
         >
           New Story
         </button>
       </div>
-      <div id="inputs-box" class="py-4">
+      <div id="inputs-box" class="py-4 px-2">
         Click a button above to initiate an admin action :)
       </div>
-      <p id="err-field" class="py-1 text-orange-400"></p>
+      <p id="err-field" class="py-1 text-orange-400 px-2"></p>
       <div>
         <input
           id="passcode-field"
