fix: correct admin behaviour

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -39,6 +39,16 @@
       <div id="inputs-box" class="py-4 px-2">
         Click a button above to initiate an admin action :)
       </div>
+      <p>
+        See
+        <a
+          id="schema-link"
+          class="py-1 italic underline text-blue-400"
+          href="https://github.com/georgejmx/georgejmx/blob/main/prisma/schema.prisma"
+          >schema</a
+        >
+        for input instructions
+      </p>
       <p id="err-field" class="py-1 text-orange-400 px-2"></p>
       <div>
         <input
