test: code audit

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,11 +36,10 @@
         <div id="home-box" style="display: initial">
           <div>
             <p class="text-slate-300 font-mono bg-black md:text-sm">
-              Developer lost in fractal space; currently pursuing my passion for
-              web development after graduating. Motivated about the potential of
-              technology to drive change, and also the chance to be creative in
-              and out of work. Away from fractalspace I enjoy travelling,
-              hiking, reading and picking up a Uke.
+              DIY developer with a passion for technology and creativity. Maths graduate currently 
+              pursuing my career in full-stack software development. Motivated by the
+              potential of technology to drive positive change, and also the opportunity to be creative
+              in and out of work
             </p>
           </div>
           <div
@@ -130,7 +129,7 @@
             “If you do not tell the truth about yourself you cannot tell it
             about other people.”
           </p>
-          <div class="flex mt-4 px-1">
+          <div class="flex mt-4 px-1 mb-10">
             <p class="text-orange-600 font-mono bg-black md:text-sm">
               Living a life of changing perspectives and continual discovery
             </p>
@@ -148,13 +147,19 @@
         <div id="story-box" style="display: none"></div>
       </div>
     </main>
+    <br>
   </body>
+  <footer>
+    <div style="position: fixed; bottom: 0; left: 0; height: 30px; z-index: 10; width: 100%" class="bg-orange-600 w-full text-center">
+      <p class="my-1 font-mono text-xs">Solidarity with <strong>Trans Youth</strong>, <a href="https://https://genderedintelligence.co.uk/services/publicengagement/our-campaigns.html" class="underline">find out more</a></p>
+    </div>
+  </footer>
 </html>
 
 <!-- Frontend styles generates by JavaScript that WindiCSS needs; as it cant read server templates like tailwind can
 <h1>Fascinations</h1>
 <div
-  class="fill-orange-600 fill-yellow-500 fill-orange-400 text-orange-600 text-yellow-500 text-orange-400 w-18 w-19 w-20 w-21 w-22 w-23 w-24 w-25 w-26 w-27 w-28 w-29 w-30 h-4 ml-2"
+  class="mb-10 pb-80 fill-orange-600 fill-yellow-500 fill-orange-400 text-orange-600 text-yellow-500 text-orange-400 w-18 w-19 w-20 w-21 w-22 w-23 w-24 w-25 w-26 w-27 w-28 w-29 w-30 h-4 ml-2"
 ></div> 
 <h1>Stories</h1>
 <div
