--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/fractal.ico" />
+        <link rel="canonical" href="https://georgejmx.dev" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>George | Home</title>
     </head>
