chore: improve ux

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/fractal.ico" />
         <link rel="canonical" href="https://georgejmx.dev" />
+        <meta
+            name="description"
+            content="George Miller - Software Engineer and DIY Developer. Explore my personality, projects, skills, and experience on my personal homepage."
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>George | Home</title>
     </head>
